// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkMapMarker should render correctly with a "arrowClassName" attribute 1`] = `
<BpkBasicMapMarker
  position={
    Object {
      "latitude": 41.386947,
      "longitude": 2.170048,
    }
  }
>
  <button
    className="bpk-map-marker__wrapper"
    onClick={null}
    type="button"
  >
    <div
      className="bpk-map-marker bpk-map-marker--primary"
    >
      <span>
        Icon
      </span>
    </div>
    <div
      className="bpk-map-marker__arrow custom-class-1 custom-class-2"
    >
      <_default />
    </div>
  </button>
</BpkBasicMapMarker>
`;

exports[`BpkMapMarker should render correctly with a "buttonProps" attribute 1`] = `
<BpkBasicMapMarker
  position={
    Object {
      "latitude": 41.386947,
      "longitude": 2.170048,
    }
  }
>
  <button
    className="bpk-map-marker__wrapper"
    onClick={null}
    testId="arbitrary value"
    type="button"
  >
    <div
      className="bpk-map-marker bpk-map-marker--primary"
    >
      <span>
        Icon
      </span>
    </div>
    <div
      className="bpk-map-marker__arrow"
    >
      <_default />
    </div>
  </button>
</BpkBasicMapMarker>
`;

exports[`BpkMapMarker should render correctly with a "className" attribute 1`] = `
<BpkBasicMapMarker
  position={
    Object {
      "latitude": 41.386947,
      "longitude": 2.170048,
    }
  }
>
  <button
    className="bpk-map-marker__wrapper"
    onClick={null}
    type="button"
  >
    <div
      className="bpk-map-marker bpk-map-marker--primary custom-class-1 custom-class-2"
    >
      <span>
        Icon
      </span>
    </div>
    <div
      className="bpk-map-marker__arrow"
    >
      <_default />
    </div>
  </button>
</BpkBasicMapMarker>
`;

exports[`BpkMapMarker should render correctly with a "large" attribute 1`] = `
<BpkBasicMapMarker
  position={
    Object {
      "latitude": 41.386947,
      "longitude": 2.170048,
    }
  }
>
  <button
    className="bpk-map-marker__wrapper"
    onClick={null}
    type="button"
  >
    <div
      className="bpk-map-marker bpk-map-marker--primary bpk-map-marker--large"
    >
      <span>
        Icon
      </span>
    </div>
    <div
      className="bpk-map-marker__arrow"
    >
      <_default />
    </div>
  </button>
</BpkBasicMapMarker>
`;

exports[`BpkMapMarker should render correctly with a "selected" attribute 1`] = `
<BpkBasicMapMarker
  position={
    Object {
      "latitude": 41.386947,
      "longitude": 2.170048,
    }
  }
>
  <button
    className="bpk-map-marker__wrapper"
    onClick={null}
    type="button"
  >
    <div
      className="bpk-map-marker bpk-map-marker--primary bpk-map-marker--primary-selected"
    >
      <span>
        Icon
      </span>
    </div>
    <div
      className="bpk-map-marker__arrow bpk-map-marker__arrow--primary-selected"
    >
      <_default />
    </div>
  </button>
</BpkBasicMapMarker>
`;

exports[`BpkMapMarker should render properly 1`] = `
<BpkBasicMapMarker
  position={
    Object {
      "latitude": 41.386947,
      "longitude": 2.170048,
    }
  }
>
  <button
    className="bpk-map-marker__wrapper"
    onClick={null}
    type="button"
  >
    <div
      className="bpk-map-marker bpk-map-marker--primary"
    >
      <span>
        Icon
      </span>
    </div>
    <div
      className="bpk-map-marker__arrow"
    >
      <_default />
    </div>
  </button>
</BpkBasicMapMarker>
`;
